--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 	<!--		<tag>HEAD</tag>-->
 	<!--	</scm>-->
 
+
 	<licenses>
 		<license>
 			<name>The Apache Software License, Version 2.0</name>
@@ -81,6 +82,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>21</java.version>
 		<slf4j.version>2.0.7</slf4j.version>
+		<junit.version>5.10.1</junit.version>
+		<junit.scope>test</junit.scope>
 	</properties>
 
 	<dependencies>
@@ -101,10 +104,16 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.13.2</version>
-			<scope>test</scope>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>${junit.version}</version>
+			<scope>${junit.scope}</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.vintage</groupId>
+			<artifactId>junit-vintage-engine</artifactId>
+			<version>${junit.version}</version>
+			<scope>${junit.scope}</scope>
 		</dependency>
 	</dependencies>
 
