--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 		<java.version>21</java.version>
 		<slf4j.version>2.0.7</slf4j.version>
 		<guava.version>31.1-jre-r1</guava.version>
-		<owlapi4.version>4.5.25-ikm-r3-SNAPSHOT</owlapi4.version>
+		<owlapi4.version>4.5.25-ikm-r3</owlapi4.version>
 		<junit4.version>4.13.2</junit4.version>
 		<junit-jupiter-api.version>5.6.3</junit-jupiter-api.version>
 	</properties>
