--- a/owlapi-proof/pom.xml
+++ b/owlapi-proof/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>dev.ikm.puli</groupId>
 		<artifactId>puli-parent</artifactId>
-		<version>0.2.2-SNAPSHOT</version>
+		<version>0.2.2</version>
 	</parent>
 
 	<artifactId>owlapi-proof</artifactId>
