--- a/puli/pom.xml
+++ b/puli/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>dev.ikm.puli</groupId>
 		<artifactId>puli-parent</artifactId>
-		<version>0.2.2</version>
+		<version>0.2.3-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>puli</artifactId>
