--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>dev.ikm.puli</groupId>
 	<artifactId>puli-parent</artifactId>
-	<version>0.3.0-ikm-r1</version>
+	<version>0.3.0-ikm-r2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>Proof Utility</name>
