--- a/puli/pom.xml
+++ b/puli/pom.xml
@@ -31,6 +31,7 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
+			<scope>test</scope>
 		</dependency>
 		<!-- dev.ikm JPMS dependencies-->
 		<dependency>
