--- a/pom.xml
+++ b/pom.xml
@@ -33,9 +33,11 @@
 		<java.version>21</java.version>
 		<slf4j.version>2.0.7</slf4j.version>
 		<guava.version>31.1-jre-r1</guava.version>
+		<!--<owlapi4.version>4.5.25-ikm-r3</owlapi4.version>-->
 		<owlapi4.version>4.7.0</owlapi4.version>
 		<junit4.version>4.13.2</junit4.version>
 		<junit-jupiter-api.version>5.6.3</junit-jupiter-api.version>
+		<nexus-staging-maven-plugin.version>1.6.13</nexus-staging-maven-plugin.version>
 	</properties>
 
 	<dependencyManagement>
@@ -170,6 +172,12 @@
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>versions-maven-plugin</artifactId>
 					<version>2.16.1</version>
+				</plugin>
+				<!-- This plugin stage the artifacts to the OSSRH Repository, release and sync them with Central Repository -->
+				<plugin>
+					<groupId>org.sonatype.plugins</groupId>
+					<artifactId>nexus-staging-maven-plugin</artifactId>
+					<version>${nexus-staging-maven-plugin.version}</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
@@ -430,6 +438,7 @@
 						</configuration>
 					</plugin>
 
+					<!-- This plugin stage the artifacts to the OSSRH Repository, release and sync them with Central Repository -->
 					<plugin>
 						<groupId>org.sonatype.plugins</groupId>
 						<artifactId>nexus-staging-maven-plugin</artifactId>
