--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,6 @@
 		<owlapi4.version>4.7.0</owlapi4.version>
 		<junit4.version>4.13.2</junit4.version>
 		<junit-jupiter-api.version>5.6.3</junit-jupiter-api.version>
-		<nexus-staging-maven-plugin.version>1.6.13</nexus-staging-maven-plugin.version>
 	</properties>
 
 	<dependencyManagement>
@@ -177,7 +176,7 @@
 				<plugin>
 					<groupId>org.sonatype.plugins</groupId>
 					<artifactId>nexus-staging-maven-plugin</artifactId>
-					<version>${nexus-staging-maven-plugin.version}</version>
+					<version>1.6.13</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
@@ -363,7 +362,7 @@
 			<distributionManagement>
 				<snapshotRepository>
 					<id>ossrh</id>
-					<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+					<url>https://nexus.build.tinkarbuild.com/repository/maven-snapshots</url>
 				</snapshotRepository>
 				<repository>
 					<id>maven-releases</id>
@@ -384,7 +383,7 @@
 			<distributionManagement>
 				<snapshotRepository>
 					<id>ossrh</id>
-					<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+					<url>https://nexus.build.tinkarbuild.com/repository/maven-snapshots</url>
 				</snapshotRepository>
 				<repository>
 					<id>maven-releases</id>
@@ -406,7 +405,7 @@
 			<distributionManagement>
 				<snapshotRepository>
 					<id>ossrh</id>
-					<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+					<url>https://nexus.build.tinkarbuild.com/repository/maven-snapshots</url>
 				</snapshotRepository>
 				<repository>
 					<id>maven-releases</id>
@@ -438,7 +437,6 @@
 						</configuration>
 					</plugin>
 
-					<!-- This plugin stage the artifacts to the OSSRH Repository, release and sync them with Central Repository -->
 					<plugin>
 						<groupId>org.sonatype.plugins</groupId>
 						<artifactId>nexus-staging-maven-plugin</artifactId>
