--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,12 +9,24 @@ on:
       release_message:
         type: string
         description: "(Optional) Enter Release Message"
+  workflow_call:
+    inputs:
+      new_version:
+        type: string
+        required: true
+      release_version:
+        type: string
+        required: true
+      release_message:
+        type: string
+        required: false
 
 # Define environment parameters
 env:
   BRANCH_NAME: ${{github.ref_name}}
   TRUNK_BRANCH_NAME: master
   RELEASE_MESSAGE: ${{github.event.inputs.release_message}}
+  MAVEN_SETTING: '/home/ec2-user/maven/.m2/settings.xml'
 
 # Define jobs within the workflow
 jobs:
@@ -22,9 +34,6 @@ jobs:
     if: github.repository_owner == 'ikmdev'
     runs-on: ubuntu-latest
     name: Initialization
-    outputs:
-      NEXT_SNAPSHOT_VERSION: ${{steps.nextSnapshotVersion.outputs.SnapshotVersion}}
-      RELEASE_VERSION: ${{steps.splitCurrentVersion.outputs._0}}
 
     steps:
       - name: Verify Branch
@@ -42,51 +51,201 @@ jobs:
           distribution: 'adopt'
           java-version: '21'
 
-      - name: Get Current Version
-        run: |
-          echo "POM_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
-
-      - name: Print Version
-        run: echo ${{env.POM_VERSION}}
-
-      - name: Verify Is SNAPSHOT Version
-        if: ${{ !contains(env.POM_VERSION, '-SNAPSHOT')}}
-        run: |
-          echo "ERROR: Version is set to incompatible version ${{env.POM_VERSION}}. Only SNAPSHOT development versions can be converted to a release version."
-          exit 1
-
-      - name: Split version code
-        uses: xom9ikk/split@v1.1
-        id: splitCurrentVersion
+      - name: Set up Node.js (for XML parsing)
+        uses: actions/setup-node@v4
         with:
-          string: ${{env.POM_VERSION}}
-          separator: '-'
-          limit: -1
+          node-version: '16'
 
-      - name: Split version code - Separate By .
-        uses: xom9ikk/split@v1.1
-        id: splitVersionMinor
+      - name: Install XML2JS
+        run: npm install xml2js
+
+      - name: Extract and Increment Version
+        id: increment_version
+        run: |
+          # Extract the current version from pom.xml
+          CURRENT_VERSION=$(grep -oPm1 "(?<=<version>)[^<]+" pom.xml)
+          
+          # Split the version into parts
+          VERSION_PREFIX=$(echo $CURRENT_VERSION | grep -oE '^[0-9]+\.[0-9]+\.[0-9]+')
+          VERSION_SUFFIX=$(echo $CURRENT_VERSION | grep -oE '[a-zA-Z0-9\-]+$')
+          
+          # Extract the current numeric suffix
+          CURRENT_SUFFIX_NUMBER=$(echo $VERSION_SUFFIX | grep -oE '[0-9]+$')
+          
+          # Increment the suffix number
+          NEW_SUFFIX_NUMBER=$((CURRENT_SUFFIX_NUMBER + 1))
+          
+          # Form the new version
+          NEW_VERSION="$VERSION_PREFIX-ikm-r$NEW_SUFFIX_NUMBER"
+          
+          # Output the new version
+          echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
+          echo "RELEASE_VERSION=$CURRENT_VERSION" >> $GITHUB_ENV
+
+      - name: Update Version in pom.xml
+        run: |
+          NEW_VERSION=${{ env.NEW_VERSION }}
+          
+          # Update the version in pom.xml
+          node -e "
+          const fs = require('fs');
+          const xml2js = require('xml2js');
+          const parser = new xml2js.Parser();
+          const builder = new xml2js.Builder();
+          
+          fs.readFile('pom.xml', (err, data) => {
+            if (err) throw err;
+            parser.parseString(data, (err, result) => {
+              if (err) throw err;
+              result.project.version[0] = '$NEW_VERSION';
+              const xml = builder.buildObject(result);
+              fs.writeFile('pom.xml', xml, (err) => {
+                if (err) throw err;
+                console.log('Updated pom.xml with new version: $NEW_VERSION');
+              });
+            });
+          });
+          "
+
+  #Setting versioning for build and tags
+  set_build_and_tag_release_and_set_next_dev_version:
+    name: Set, Build, Tag Release Version & Set Next Version
+    runs-on: self-hosted
+    permissions:
+      contents: write
+
+    steps:
+      - name: Setup Maven Action
+        uses: s4u/setup-maven-action@v1.14.0
         with:
-          string: ${{steps.splitCurrentVersion.outputs._0}}
-          separator: .
-          limit: -1
+          checkout-fetch-depth: 0
+          java-version: 21
+          java-distribution: adopt
+          maven-version: 3.9.0
 
-      - name: Increment Snapshot Version
-        id: nextSnapshotVersion
+      - name: Set Release Version
         run: |
-          echo "SnapshotVersion=${{steps.splitVersionMinor.outputs._0}}.$((${{steps.splitVersionMinor.outputs._1}})).${{steps.splitVersionMinor.outputs._2}}-ikm-$(({{steps.splitVersionMinor.outputs._3}} +1))-SNAPSHOT" >> $GITHUB_OUTPUT
+          mvn -B versions:set \
+          -s ${{env.MAVEN_SETTING}} \
+          -DnewVersion=${{inputs.release_version}} \
+          -DgenerateBackupPoms=false
 
-      - name: Print Information
+      - name: Build Release Version
         run: |
-          echo "Release Version -- ${{steps.splitCurrentVersion.outputs._0}}"
-          echo "Snapshot Version -- ${{steps.nextSnapshotVersion.outputs.SnapshotVersion}}"
+          mvn -version
+          mvn clean install \
+                -s ${{env.MAVEN_SETTING}} \
+                --batch-mode \
+                -e \
+                -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn \
+                -PcodeQuality,release-enforcement
 
-  call_release_workflow_with_custom_inputs:
-    needs: initialization
-    uses: ikmdev/github_actions_test/.github/workflows/reusable_release_workflow.yaml@main
+      - name: Create tag
+        run: |
+          git remote set-url origin https://git:${{secrets.GITHUB_TOKEN}}@github.com/${{github.repository}}.git
+          git config user.name "Cloud User"
+          git add .
+          git commit -m 'Release ${{inputs.release_version}}'
+          git tag -a ${{inputs.release_version}} -m '${{inputs.release_version}}' --force
+
+      - name: Set Dev Version
+        run: |
+          mvn -B versions:set \
+          -s ${{env.MAVEN_SETTING}} \
+          -DnewVersion=${{inputs.new_version}} \
+          -DgenerateBackupPoms=false
+
+      - name: Commit & Push
+        run: |
+          git add .
+          git commit -m 'Set next dev version to ${{inputs.new_version}}'
+          git push origin HEAD:master
+          git push --tags origin
+
+  # Creating a release
+  create_release:
+    name: Create Release
     permissions: write-all
-    secrets: inherit
-    with:
-      snapshot_version: ${{needs.initialization.outputs.NEXT_SNAPSHOT_VERSION}}
-      release_version: ${{needs.initialization.outputs.RELEASE_VERSION}}
-      release_message: ${{github.event.inputs.release_message}}
+
+    needs:
+      - set_build_and_tag_release_and_set_next_dev_version
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Modify Release Message
+        if: inputs.release_message == ''
+        run: echo "RELEASE_MESSAGE=Release ${{inputs.release_version}}" >> $GITHUB_ENV
+
+      - name: Create Release
+        id: create_release
+        run: |
+          curl -L \
+           -X POST \
+           -H "Accept: application/vnd.github+json" \
+           -H "Authorization: Bearer ${{secrets.GITHUB_TOKEN}}" \
+           -H "X-GitHub-Api-Version: 2022-11-28" \
+           https://api.github.com/repos/${{github.repository}}/releases \
+          -d '{"tag_name":"${{inputs.release_version}}","name":"${{inputs.release_version}}","body":"${{env.RELEASE_MESSAGE}}","draft":false,"prerelease":false,"generate_release_notes":false}'
+
+
+  publish-artifacts:
+    name: Publishing Artifacts to Nexus & OSSRH
+    runs-on: self-hosted
+    needs:
+      - create_release
+    steps:
+      - name: Setup Maven Action
+        uses: s4u/setup-maven-action@v1.14.0
+        with:
+          checkout-fetch-depth: 0
+          java-version: 21
+          java-distribution: adopt
+          maven-version: 3.9.0
+
+      - name: Checkout Code Repository
+        uses: actions/checkout@v4
+        with:
+          ref: ${{inputs.release_version}}
+
+      - name: Maven Build
+        run: |
+          mvn clean install \
+            -s ${{env.MAVEN_SETTING}} \
+            --batch-mode \
+            -e \
+            -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn \
+            -PcodeQuality
+
+      - name: Deploy To Nexus
+        run: |
+          mvn deploy \
+                --batch-mode \
+                -e \
+                -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn \
+                -DskipTests \
+                -DskipITs \
+                -Dmaven.master.skip \
+                -Dmaven.test.skip \
+                -s ${{env.MAVEN_SETTING}} \
+                -DrepositoryId='maven-releases' \
+                -Dgpg.passphrase=${{secrets.SELF_HOSTED_GPG_PASSPHRASE}}
+
+
+      - name: Publish To OSSRH (Maven Central Staging)
+        run: |
+          mvn deploy \
+              --batch-mode \
+              -e \
+              -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn \
+              -DskipTests \
+              -DskipITs \
+              -Dmaven.master.skip \
+              -Dmaven.test.skip \
+              -s ${{env.MAVEN_SETTING}} \
+              -DrepositoryId='maven-releases' \
+              -DrepositoryIdOSSRH='true' \
+              -PstageOSSRH -Dgpg.passphrase=${{secrets.SELF_HOSTED_GPG_PASSPHRASE}}
