--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -88,7 +88,7 @@ jobs:
           
       - name: Print Information
         run: |
-          echo "Release Version = $RELEASE_VERSION" >> $GITHUB_ENV
+          echo "RELEASE_VERSION = $RELEASE_VERSION" >> $GITHUB_ENV
           echo "NEW_DEV_VERSION = $NEW_DEV_VERSION" >> $GITHUB_ENV
 
       - name: Set Release Version in pom.xml
