--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -83,6 +83,14 @@ jobs:
           });
           "
 
+  #Setting versioning for build and tags
+  set_build_and_tag_release_and_set_next_dev_version:
+    name: Set, Build, Tag Release Version & Set Next Version
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+
+    steps:
       - name: Build Release Version
         run: |
           mvn tidy:pom
@@ -126,3 +134,91 @@ jobs:
         run: |
           git commit -am "Set new development version to ${{ env.NEW_DEV_VERSION }}"
           git push origin master
+
+  # Creating a release
+  create_release:
+    name: Create Release
+    permissions: write-all
+
+    needs:
+      - set_build_and_tag_release_and_set_next_dev_version
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Modify Release Message
+        if: inputs.release_message == ''
+        run: echo "RELEASE_MESSAGE=Release ${{env.new_dev_version}}" >> $GITHUB_ENV
+
+      - name: Create Release
+        id: create_release
+        run: |
+          curl -L \
+           -X POST \
+           -H "Accept: application/vnd.github+json" \
+           -H "Authorization: Bearer ${{secrets.GITHUB_TOKEN}}" \
+           -H "X-GitHub-Api-Version: 2022-11-28" \
+           https://api.github.com/repos/${{github.repository}}/releases \
+          -d '{"tag_name":"${{env.new_dev_version}}","name":"${{env.new_dev_version}}","body":"${{env.RELEASE_MESSAGE}}","draft":false,"prerelease":false,"generate_release_notes":false}'
+
+
+  publish-artifacts:
+    name: Publishing Artifacts to Nexus & OSSRH
+    runs-on: self-hosted
+    needs:
+      - create_release
+    steps:
+      - name: Setup Maven Action
+        uses: s4u/setup-maven-action@v1.14.0
+        with:
+          checkout-fetch-depth: 0
+          java-version: 21
+          java-distribution: adopt
+          maven-version: 3.9.0
+
+      - name: Checkout Code Repository
+        uses: actions/checkout@v4
+        with:
+          ref: ${{env.new_dev_version}}
+
+      - name: Maven Build
+        run: |
+          mvn clean install \
+            -s ${{env.MAVEN_SETTING}} \
+            --batch-mode \
+            -e \
+            -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn \
+            -PcodeQuality
+
+      - name: Deploy To Nexus
+        run: |
+          mvn deploy \
+                --batch-mode \
+                -e \
+                -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn \
+                -DskipTests \
+                -DskipITs \
+                -Dmaven.master.skip \
+                -Dmaven.test.skip \
+                -s ${{env.MAVEN_SETTING}} \
+                -DrepositoryId='maven-releases' \
+                -Dgpg.passphrase=${{secrets.SELF_HOSTED_GPG_PASSPHRASE}}
+
+
+      - name: Publish To OSSRH (Maven Central Staging)
+        run: |
+          mvn deploy \
+              --batch-mode \
+              -e \
+              -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn \
+              -DskipTests \
+              -DskipITs \
+              -Dmaven.master.skip \
+              -Dmaven.test.skip \
+              -s ${{env.MAVEN_SETTING}} \
+              -DrepositoryId='maven-releases' \
+              -DrepositoryIdOSSRH='true' \
+              -PstageOSSRH -Dgpg.passphrase=${{secrets.SELF_HOSTED_GPG_PASSPHRASE}}
