--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,7 +15,7 @@ on:
 jobs:
   publish-artifacts:
     name: Publish Artifacts
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     #if: github.event.workflow_run.conclusion == 'success' && github.repository_owner == 'ikmdev'
     if: github.repository_owner == 'ikmdev'
 
