--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ env:
   BRANCH_NAME: ${{github.ref_name}}
   TRUNK_BRANCH_NAME: master
   RELEASE_MESSAGE: ${{github.event.inputs.release_message}}
-  MAVEN_SETTING: '/home/ec2-user/maven/.m2/settings.xml'
+  MAVEN_FILE: '/home/ec2-user/maven/.m2/settings.xml'
 
 jobs:
   release:
@@ -196,7 +196,7 @@ jobs:
       - name: Maven Build
         run: |
           mvn clean install \
-            -s ${{env.MAVEN_SETTING}} \
+            -s ${{env.MAVEN_FILE}} \
             --batch-mode \
             -e \
             -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn \
@@ -213,7 +213,7 @@ jobs:
                 -DskipITs \
                 -Dmaven.master.skip \
                 -Dmaven.test.skip \
-                -s ${{env.MAVEN_SETTING}} \
+                -s ${{env.MAVEN_FILE}} \
                 -DrepositoryId='maven-releases' \
                 -Dgpg.passphrase=${{secrets.SELF_HOSTED_GPG_PASSPHRASE}}
 
@@ -229,7 +229,7 @@ jobs:
               -DskipITs \
               -Dmaven.master.skip \
               -Dmaven.test.skip \
-              -s ${{env.MAVEN_SETTING}} \
+              -s ${{env.MAVEN_FILE}} \
               -DrepositoryId='maven-releases' \
               -DrepositoryIdOSSRH='true' \
               -PstageOSSRH -Dgpg.passphrase=${{secrets.SELF_HOSTED_GPG_PASSPHRASE}}
